# mtk

./: .gitignore  CMakeLists.txt  README.md
include/mtk/: mtk.h  string.h
src/: string.c
test/: string.c
